--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,26 @@
     <title>CD Single App</title>
 </head>
 <body>
+    <style>
+        table, th, td {
+            border: 1px solid black;
+            border-collapse: collapse;
+            padding: 5px;
+        }
+    </style>
     <h1></h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Firstname</th>
+                <th>Lastname</th>
+                <th>band</th>
+            </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+    </table>
+    
 </body>
 </html>
